added more basic CSS and started intermediate CSS

--- a/4 - CSS Basics/selectors.html
+++ b/4 - CSS Basics/selectors.html
@@ -38,6 +38,23 @@
             font-family: Arial, sans-serif;
             margin: 0;
         }
+        
+        /* Specificity */
+        #id-name {
+            font-family: 'Lucida Sans', sans-serif;
+        }
+
+        .class-name {
+            font-family: 'Comic Sans MS', cursive;
+        }
+
+        p {
+            font-family: 'Courier New', sans-serif;
+        }
+
+        * {
+            font-family: Verdana, sans-serif;
+        }
 
         /* Grouping Selector */
         h1, h2, .parag {
