--- a/6 - JavaScript/index.html
+++ b/6 - JavaScript/index.html
@@ -11,10 +11,15 @@
         <li> <strong>Statements:</strong> JavaScript code is composed of statements that perform specific actions. Each statement typically ends with a semicolon (;), although it is not always required.</li>
         <li><strong>Comments: </strong> You can add comments in JavaScript to provide explanations or make notes within the code. There are two types of comments: single-line comments, starting with //, and multi-line comments, enclosed between /* and */.</li>
         <li><strong>Case sensitivity</strong> JavaScript is case-sensitive, meaning that uppercase and lowercase letters are treated differently. For example, "variable" and "Variable" would be considered as two separate variables. </li>
-        <li><strong>Whitespace</strong> JavaScript ignores spaces, tabs, and line breaks (collectively called whitespace) that are not necessary for code execution. However, whitespace can enhance code readability.</li>
+        <li><strong>Whitespaces:</strong> JavaScript ignores spaces, tabs, and line breaks (collectively called whitespace) that are not necessary for code execution. However, whitespace can enhance code readability.</li>
         <li><strong>Blocks: </strong> Code blocks in JavaScript are enclosed in curly braces ({}) and are used to group statements together. Blocks are often used in control structures like loops and conditional statements.</li>
     </ul>
 
-    <script src="variables.js"></script>
+    <!-- <script src="variables.js"></script> -->
+    <!-- <script src="data-types.js"></script> -->
+    <script src="arrays.js"></script>
+    <!-- <script src="operators-and-expressions.js"></script> -->
+    <!-- <script src="control-flow-structures.js"></script> -->
+    <!-- <script src="functions.js"></script> -->
 </body>
 </html>
